--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ inc/
 /.carmel/
 # cpanfile.snapshot should generally be ignored for library code, otherwise included
 # cpanfile.snapshot 
+
+src/*pm
